📚 Auto-update: News data refreshed - 2026-01-01 11:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35086,5 +35086,85 @@
         "published": "Thu, 01 Jan 2026 09:29:32 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"2025 In Review: The Best Of Inc42\u2019s 30 Startups To Watch\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-4.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />With a record number of startup IPOs, consistent private capital flow and new avenues for tech innovation emerging in India,&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-sexy-chatbots/",
+        "title": "AI Labor Is Boring. AI Lust Is Big Business",
+        "link": "https://www.wired.com/story/expired-tired-wired-sexy-chatbots/",
+        "published": "Thu, 01 Jan 2026 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "After years of hype about generative AI increasing productivity and making lives easier, 2025 was the year erotic chatbots defined AI\u2019s narrative."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-functional-coffee-add-ins/",
+        "title": "I Tested Popular Functional Coffee Add-Ins for a Week Each (2026)",
+        "link": "https://www.wired.com/gallery/best-functional-coffee-add-ins/",
+        "published": "Thu, 01 Jan 2026 10:34:00 +0000",
+        "source": "WIRED",
+        "summary": "Our reviewer optimized his morning cup of coffee with creamer substitutes that promise health benefits and mental clarity."
+    },
+    {
+        "id": "https://www.wired.com/story/cold-and-flu-prevention-treatment-tips/",
+        "title": "How to Make It Through Cold and Flu Season",
+        "link": "https://www.wired.com/story/cold-and-flu-prevention-treatment-tips/",
+        "published": "Thu, 01 Jan 2026 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Reduce your chances of catching these respiratory illnesses, and make sure you don't spread it to others."
+    },
+    {
+        "id": "https://moultano.wordpress.com/2025/12/30/children-and-helical-time/",
+        "title": "If childhood is half of subjective life, how should that change how we live?",
+        "link": "https://moultano.wordpress.com/2025/12/30/children-and-helical-time/",
+        "published": "Thu, 01 Jan 2026 09:53:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46452763\">Comments</a>"
+    },
+    {
+        "id": "https://www.nytimes.com/2025/12/26/business/sears-seritage-edward-lampert.html",
+        "title": "Only 5 Sears stores remain in the U.S.",
+        "link": "https://www.nytimes.com/2025/12/26/business/sears-seritage-edward-lampert.html",
+        "published": "Sat, 27 Dec 2025 19:37:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46404509\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/orbitiny-portable-modular-unique-linux-desktop/",
+        "title": "This new Linux desktop runs like an app on your existing desktop - and I highly recommend it",
+        "link": "https://www.zdnet.com/article/orbitiny-portable-modular-unique-linux-desktop/",
+        "published": "Thu, 01 Jan 2026 11:01:01 GMT",
+        "source": "Latest news",
+        "summary": "Portable and modular, Orbitiny runs on top of your existing window manager - such as KDE Plasma or GNOME - like a regular app."
+    },
+    {
+        "id": "https://www.zdnet.com/article/rolling-square-aircard-dual-review/",
+        "title": "This AirTag alternative fits in my wallet and works just as well with Android phones",
+        "link": "https://www.zdnet.com/article/rolling-square-aircard-dual-review/",
+        "published": "Thu, 01 Jan 2026 11:00:46 GMT",
+        "source": "Latest news",
+        "summary": "Rolling Square's AirCard Pro Dual features one of the loudest buzzers I've tested, along with glow-in-the-dark inserts."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/elon-musk-donates-100-million-in-tesla-shares-to-charity/articleshow/126286333.cms",
+        "title": "Elon Musk donates $100 million in Tesla shares to charity",
+        "link": "https://economictimes.indiatimes.com/tech/technology/elon-musk-donates-100-million-in-tesla-shares-to-charity/articleshow/126286333.cms",
+        "published": "Thu, 01 Jan 2026 16:23:16 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Tesla chief Elon Musk has given away 2,10,699 Tesla shares to charity, valued at roughly $100 million, according to a filing with the US Securities and Exchange Commission (SEC). The filing shows that the donation was made on December 30, 2025."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/zomato-blinkit-deliver-record-high-of-75-lakh-orders-on-december-31-deepinder-goyal/articleshow/126286254.cms",
+        "title": "Zomato, Blinkit deliver record high of 75 lakh orders on December 31: Deepinder Goyal",
+        "link": "https://economictimes.indiatimes.com/tech/startups/zomato-blinkit-deliver-record-high-of-75-lakh-orders-on-december-31-deepinder-goyal/articleshow/126286254.cms",
+        "published": "Thu, 01 Jan 2026 15:56:44 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Food delivery platform Zomato and quick commerce firm Blinkit together delivered a record high of 75 lakh orders on New Year\u2019s Eve Wednesday, unaffected by gig workers\u2019 call to strike, said Deepinder Goyal, founder of the platforms\u2019 parent Eternal."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/startups-likely-to-go-public-in-2026-helping-citizens-understand-the-air-they-breathe",
+        "title": "Startups likely to go public in 2026; Helping citizens understand the air they breathe",
+        "link": "https://yourstory.com/2026/01/startups-likely-to-go-public-in-2026-helping-citizens-understand-the-air-they-breathe",
+        "published": "Thu, 01 Jan 2026 16:15:09 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "In 2025, six large startups went public\u2014minting founder-billionaires and handing windfall gains to venture funds."
     }
 ]
