--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35198,5 +35198,109 @@
         "published": "Thu, 01 Jan 2026 17:01:58 +0530",
         "source": "Tech-Economic Times",
         "summary": "Agriculture and Farmers Welfare Minister Gurmeet Singh Khudian chaired a meeting at Punjab Bhawan here to review progress and prepare a roadmap for field-level use of AI-based solutions."
+    },
+    {
+        "id": "https://techcrunch.com/video/fizz-social-apps-ceo-on-why-anon-works/",
+        "title": "Fizz social app\u2019s CEO on why anon works",
+        "link": "https://techcrunch.com/video/fizz-social-apps-ceo-on-why-anon-works/",
+        "published": "Thu, 01 Jan 2026 13:25:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Fizz&#160;is&#160;betting that Gen Z is tired of performing their lives on Instagram and TikTok.&#160;&#160; What started as a pandemic-era group chat frustration has turned into the dominant social platform on college campuses across the US, focused on the 99% of life that&#160;doesn&#8217;t&#160;make it into a highlight reel. Capturing the attention of a demographic typically glued [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-smart-scales/",
+        "title": "4 Best Smart Scales (2026), Tested and Reviewed",
+        "link": "https://www.wired.com/gallery/best-smart-scales/",
+        "published": "Thu, 01 Jan 2026 12:30:00 +0000",
+        "source": "WIRED",
+        "summary": "If you\u2019re ready to start tracking your weight, BMI, and other health data on your phone, we\u2019ve weighed in on some great options."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2026/01/streaming-stops-feeling-infinite-what-subscribers-can-expect-in-2026/",
+        "title": "\u201cStreaming stops feeling infinite\u201d: What subscribers can expect in 2026",
+        "link": "https://arstechnica.com/gadgets/2026/01/streaming-stops-feeling-infinite-what-subscribers-can-expect-in-2026/",
+        "published": "Thu, 01 Jan 2026 13:00:18 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Streaming may get a little worse before it gets better."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2026/01/film-technica-our-top-picks-for-the-best-films-of-2025/",
+        "title": "Film Technica: Our top picks for the best films of 2025",
+        "link": "https://arstechnica.com/culture/2026/01/film-technica-our-top-picks-for-the-best-films-of-2025/",
+        "published": "Thu, 01 Jan 2026 12:00:40 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Streamers made a strong showing this year, as did horror. Big tentpoles, superhero sagas mostly fell flat."
+    },
+    {
+        "id": "https://www.engadget.com/ai/how-to-watch-the-bosch-ces-2026-press-conference-live-130020898.html?src=rss",
+        "title": "How to watch the Bosch CES 2026 press conference live",
+        "link": "https://www.engadget.com/ai/how-to-watch-the-bosch-ces-2026-press-conference-live-130020898.html?src=rss",
+        "published": "Thu, 01 Jan 2026 13:00:20 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You may know Bosch as a home appliance brand (via its partnership with Siemens), but the German multinational is generally more focused on providing underlying technology and engineering solutions to auto, home and manufacturing partners across the globe. It's fitting, then, that much of what it's showing off at <a href=\"https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html\"><ins>CES 2026</ins></a> is more intended to be licensed to "
+    },
+    {
+        "id": "https://www.engadget.com/the-best-gear-to-help-you-stick-to-your-new-years-resolutions-130000389.html?src=rss",
+        "title": "The best gear to help you stick to your New Year's resolutions",
+        "link": "https://www.engadget.com/the-best-gear-to-help-you-stick-to-your-new-years-resolutions-130000389.html?src=rss",
+        "published": "Thu, 01 Jan 2026 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The start of a new year always feels like a reset button. Everyone\u2019s talking about moving more, eating better, sleeping longer or finally taming their digital chaos. But resolutions rarely survive on willpower alone. The right tools or piece of tech can make those goals easier to keep by turning motivation into a habit. Whether you\u2019re trying to close your rings, track your progress or just build better routines, these smart picks make self-improvement feel a little more achievable, and a lot "
+    },
+    {
+        "id": "https://media.ccc.de/v/39c3-bluetooth-headphone-jacking-a-key-to-your-phone",
+        "title": "Bluetooth Headphone Jacking: A Key to Your Phone [video]",
+        "link": "https://media.ccc.de/v/39c3-bluetooth-headphone-jacking-a-key-to-your-phone",
+        "published": "Thu, 01 Jan 2026 11:17:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46453204\">Comments</a>"
+    },
+    {
+        "id": "https://blog.phronemophobic.com/easel-one-year.html",
+        "title": "Easel Turns One One year of building my own IDE in Clojure",
+        "link": "https://blog.phronemophobic.com/easel-one-year.html",
+        "published": "Sat, 27 Dec 2025 14:46:16 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46402202\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-roku-tv-settings-change-improve-performance/",
+        "title": "I changed 6 settings on my Roku TV to instantly improve its performance",
+        "link": "https://www.zdnet.com/article/best-roku-tv-settings-change-improve-performance/",
+        "published": "Thu, 01 Jan 2026 13:00:48 GMT",
+        "source": "Latest news",
+        "summary": "There are a number of ways to optimize your TV's operating system for faster performance. Here are my go-tos."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-divide-china-se-asia-ahead-of-us-europe-in-adoption/articleshow/126287968.cms",
+        "title": "AI divide: China, SE Asia ahead of US, Europe in adoption",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-divide-china-se-asia-ahead-of-us-europe-in-adoption/articleshow/126287968.cms",
+        "published": "Thu, 01 Jan 2026 18:12:56 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "According to the 2025 AI Index Report by Stanford\u2019s Institute for Human-Centered Artificial Intelligence (HAI), AI has proven to be more useful in countries such as China, Indonesia, and Thailand in 2025, with adoption or perceived usefulness levels of 83%, 80%, and 77%, respectively."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/ed-freezes-fresh-rs-192-cr-deposits-of-winzo-in-money-laundering-case-report/articleshow/126287818.cms",
+        "title": "ED freezes fresh Rs 192 crore deposits of Winzo in money laundering case: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/ed-freezes-fresh-rs-192-cr-deposits-of-winzo-in-money-laundering-case-report/articleshow/126287818.cms",
+        "published": "Thu, 01 Jan 2026 18:02:04 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Enforcement Directorate has frozen Rs 192 crore in assets belonging to Winzo's auditor. This action follows earlier raids and arrests of Winzo's founders. The agency alleges Winzo engaged in criminal activities, using bots instead of real players."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/as-google-musk-bezos-altman-back-space-data-centres-can-sky-really-be-the-next-frontier-for-ai/articleshow/126287786.cms",
+        "title": "As Google, Musk, Bezos, Altman back space data centres, can sky really be the next frontier for AI",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/as-google-musk-bezos-altman-back-space-data-centres-can-sky-really-be-the-next-frontier-for-ai/articleshow/126287786.cms",
+        "published": "Thu, 01 Jan 2026 18:00:13 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Tech giants are planning to build data centres in space. This move is driven by the immense energy and land needs of artificial intelligence. Projects like Google's Suncatcher are in development. Leaders believe space offers abundant solar energy and fewer environmental hurdles."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/instagram-ceo-mosseri-says-social-media-platform-will-struggle-to-spot-ai-slop-as-tech-improves/articleshow/126287281.cms",
+        "title": "Instagram CEO Mosseri says social media platform will struggle to spot AI slop as tech improves",
+        "link": "https://economictimes.indiatimes.com/tech/technology/instagram-ceo-mosseri-says-social-media-platform-will-struggle-to-spot-ai-slop-as-tech-improves/articleshow/126287281.cms",
+        "published": "Thu, 01 Jan 2026 17:26:14 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "He says that scepticism will be the default mode for online content, which is going to be uncomfortable since we\u2019re genetically predisposed towards believing what we\u2019re seeing."
     }
 ]
