--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35302,5 +35302,37 @@
         "published": "Thu, 01 Jan 2026 17:26:14 +0530",
         "source": "Tech-Economic Times",
         "summary": "He says that scepticism will be the default mode for online content, which is going to be uncomfortable since we\u2019re genetically predisposed towards believing what we\u2019re seeing."
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-press-conference-live-130028668.html?src=rss",
+        "title": "How to watch the NVIDIA CES 2026 presentation live",
+        "link": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-press-conference-live-130028668.html?src=rss",
+        "published": "Thu, 01 Jan 2026 14:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"NVIDIA AI Computing Card \" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/b0333b00-dcee-11f0-a993-97c527ebca4b\" style=\"height: 4000px; width: 6000px;\" /><figcaption>CFOTO via Getty Images</figcaption></figure>\n<p>During CES 2025, we watched NVIDIA tout its leading position in the artificial intelligence arena for the bulk of the presentation. But it did reveal some new hardware, including <a href=\"https://www.engadget.com/ai/everything-nvidia-ceo-jensen-huang-announc"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/in-2025-quitting-social-media-felt-easier-than-ever-140000374.html?src=rss",
+        "title": "In 2025, quitting social media felt easier than ever",
+        "link": "https://www.engadget.com/social-media/in-2025-quitting-social-media-felt-easier-than-ever-140000374.html?src=rss",
+        "published": "Thu, 01 Jan 2026 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>For a tech writer, being very offline is sort of like being a marathon coach who doesn\u2019t run. So in 2025, I tried to reverse years of studied avoidance towards the most ubiquitous technological phenomenon on earth \u2014  I got back on social media. The change was short-lived.&nbsp;</p><p>My first exodus from the feeds took some work \u2014 disabling notifications, removing apps from my homescreen and then deleting accounts entirely. This time, the phone put itself down. The whole thing has simply lost"
+    },
+    {
+        "id": "https://takes.jamesomalley.co.uk/p/this-might-be-oversharing",
+        "title": "I rebooted my social life",
+        "link": "https://takes.jamesomalley.co.uk/p/this-might-be-oversharing",
+        "published": "Thu, 01 Jan 2026 11:01:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46453114\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/neuralink-plans-high-volume-brain-implant-production-by-2026-musk-says/articleshow/126288745.cms",
+        "title": "Neuralink plans 'high-volume' brain implant production by 2026, Musk says",
+        "link": "https://economictimes.indiatimes.com/tech/technology/neuralink-plans-high-volume-brain-implant-production-by-2026-musk-says/articleshow/126288745.cms",
+        "published": "Thu, 01 Jan 2026 19:06:50 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk's company Neuralink plans to begin mass production of its brain implants in 2026. The company also aims for fully automated surgical procedures for implanting the devices.  Human trials have already begun, with patients using the implants to control digital tools.  Neuralink secured significant funding and is working to help individuals with paralysis."
     }
 ]
