📚 Auto-update: News data refreshed - 2026-01-01 15:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35334,5 +35334,37 @@
         "published": "Thu, 01 Jan 2026 19:06:50 +0530",
         "source": "Tech-Economic Times",
         "summary": "Elon Musk's company Neuralink plans to begin mass production of its brain implants in 2026. The company also aims for fully automated surgical procedures for implanting the devices.  Human trials have already begun, with patients using the implants to control digital tools.  Neuralink secured significant funding and is working to help individuals with paralysis."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/01/the-top-6-media-entertainment-startups-from-disrupt-startup-battlefield/",
+        "title": "The top 6 media/entertainment startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2026/01/01/the-top-6-media-entertainment-startups-from-disrupt-startup-battlefield/",
+        "published": "Thu, 01 Jan 2026 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the media/entertainment Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://www.theverge.com/policy/851664/new-tech-internet-laws-us-2026-ai-privacy-repair",
+        "title": "Meet the new tech laws of 2026",
+        "link": "https://www.theverge.com/policy/851664/new-tech-internet-laws-us-2026-ai-privacy-repair",
+        "published": "2026-01-01T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "As usual, 2025 was a year of deep congressional dysfunction in the US. But state legislatures were passing laws that govern everything from AI to social media to the right to repair. Many of these laws, alongside rules passed in past years, take effect in 2026 - either right now or in the coming months. [&#8230;]"
+    },
+    {
+        "id": "https://sherwood.news/tech/rather-than-fully-cracking-down-on-scam-ads-meta-worked-to-make-them-harder/",
+        "title": "Meta made scam ads harder to find instead of removing them",
+        "link": "https://sherwood.news/tech/rather-than-fully-cracking-down-on-scam-ads-meta-worked-to-make-them-harder/",
+        "published": "Thu, 01 Jan 2026 12:29:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46453582\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/bharat-taxi-to-be-launched-by-jan-end-after-successful-pilot-run/articleshow/126289159.cms",
+        "title": "Bharat Taxi to be launched by Jan-end after successful pilot run",
+        "link": "https://economictimes.indiatimes.com/tech/technology/bharat-taxi-to-be-launched-by-jan-end-after-successful-pilot-run/articleshow/126289159.cms",
+        "published": "Thu, 01 Jan 2026 19:36:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The cooperatives-backed ride-hailing service Bharat Taxi will be officially launched in Delhi and other cities by the end of January, following an encouraging response during its soft launch, a senior cooperation ministry official said on Thursday."
     }
 ]
