--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35454,5 +35454,45 @@
         "published": "Thu, 01 Jan 2026 15:48:31 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46454968\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/home/how-to-watch-the-hisense-ces-2026-presentation-live-monday-190040380.html?src=rss",
+        "title": "How to watch the Hisense CES 2026 presentation live",
+        "link": "https://www.engadget.com/home/how-to-watch-the-hisense-ces-2026-presentation-live-monday-190040380.html?src=rss",
+        "published": "Thu, 01 Jan 2026 18:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/834aecc0-dcf1-11f0-b7de-13a29302f310\" style=\"height: 4000px; width: 6000px;\" /><figcaption>Xinhua News Agency via Getty Images</figcaption></figure>\n<p>Hisense is generally best known for its budget-friendly electronics and appliances, like TVs and refrigerators. However, at CES 2025, the China-based company showcased its high-end capabilities with a massive 136-inch micro LED TV, which has recently become available for a sta"
+    },
+    {
+        "id": "https://ciechanow.ski/cameras-and-lenses/",
+        "title": "Cameras and Lenses (2020)",
+        "link": "https://ciechanow.ski/cameras-and-lenses/",
+        "published": "Thu, 01 Jan 2026 17:18:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46455872\">Comments</a>"
+    },
+    {
+        "id": "https://developer.apple.com/support/alternative-browser-engines-jp/",
+        "title": "iOS allows alternative browser engines in Japan",
+        "link": "https://developer.apple.com/support/alternative-browser-engines-jp/",
+        "published": "Thu, 01 Jan 2026 13:30:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46453950\">Comments</a>"
+    },
+    {
+        "id": "https://mkennedy.codes/posts/python-numbers-every-programmer-should-know/",
+        "title": "Python Numbers Every Programmer Should Know",
+        "link": "https://mkennedy.codes/posts/python-numbers-every-programmer-should-know/",
+        "published": "Thu, 01 Jan 2026 14:39:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46454470\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/zomato-strike-backed-by-0-1-miscreants-says-ceo-deepinder-goyal/articleshow/126291072.cms",
+        "title": "Zomato strike backed by \u20180.1% miscreants\u2019, says CEO Deepinder Goyal",
+        "link": "https://economictimes.indiatimes.com/tech/technology/zomato-strike-backed-by-0-1-miscreants-says-ceo-deepinder-goyal/articleshow/126291072.cms",
+        "published": "Thu, 01 Jan 2026 22:18:57 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Eternal CEO Deepinder Goyal said gig workers are not exploited, adding that a small group of terminated riders disrupted operations by forcibly preventing others from working."
     }
 ]
