--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35494,5 +35494,45 @@
         "published": "Thu, 01 Jan 2026 22:18:57 +0530",
         "source": "Tech-Economic Times",
         "summary": "Eternal CEO Deepinder Goyal said gig workers are not exploited, adding that a small group of terminated riders disrupted operations by forcibly preventing others from working."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/01/openai-bets-big-on-audio-as-silicon-valley-declares-war-on-screens/",
+        "title": "OpenAI bets big on audio as Silicon Valley declares war on screens",
+        "link": "https://techcrunch.com/2026/01/01/openai-bets-big-on-audio-as-silicon-valley-declares-war-on-screens/",
+        "published": "Thu, 01 Jan 2026 18:29:29 +0000",
+        "source": "TechCrunch",
+        "summary": "The form factors may differ, but the thesis is the same: audio is the interface of the future. Every space -- your home, your car, even your face -- is becoming an interface."
+    },
+    {
+        "id": "https://www.theverge.com/news/852362/lg-xboom-stage-501-karaoke-launch-ces-2026",
+        "title": "LG\u2019s new karaoke-ready party speaker uses AI to remove song vocals",
+        "link": "https://www.theverge.com/news/852362/lg-xboom-stage-501-karaoke-launch-ces-2026",
+        "published": "2026-01-01T13:16:10-05:00",
+        "source": "The Verge",
+        "summary": "LG is adding a karaoke-focused party speaker to its lineup of Xboom devices, which is built in collaboration with Will.i.am. Announced this week, LG says the Stage 501 speaker comes with an \"AI Karaoke Master\" that can remove or adjust vocals from \"virtually any song,\" similar to the Soundcore Rave 3S. It can also adjust [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/how-to-watch-hyundais-ces-2026-presentation-live-190051181.html?src=rss",
+        "title": "How to watch Hyundai's CES 2026 presentation live",
+        "link": "https://www.engadget.com/transportation/how-to-watch-hyundais-ces-2026-presentation-live-190051181.html?src=rss",
+        "published": "Thu, 01 Jan 2026 19:00:51 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/2a54c910-e5bb-11f0-9fd7-0fe99fe4214d\" style=\"height: 1333px; width: 2000px;\" /><figcaption>A look at Hyundai's Holographic Windshield Display. (Hyundai)</figcaption></figure>\n<p>While it often feels like a full-on auto show, the car vibes feel somewhat lessened at <a href=\"https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-120000768.html\"><ins>CES 2026</ins></a>. Ye"
+    },
+    {
+        "id": "https://zelang-dev.github.io/c-events/",
+        "title": "C-events, yet another event loop, simpler, smaller, faster, safer",
+        "link": "https://zelang-dev.github.io/c-events/",
+        "published": "Fri, 26 Dec 2025 14:06:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46392095\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/india-gig-economy-10-minute-delivery-zomato-blinkit-debate",
+        "title": "Deepinder Goyal on Jobs, Riders, and the Reality Behind 10-Minute Delivery",
+        "link": "https://yourstory.com/2026/01/india-gig-economy-10-minute-delivery-zomato-blinkit-debate",
+        "published": "Thu, 01 Jan 2026 17:37:01 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "India\u2019s quick-commerce model has once again found itself at the centre of a heated public debate. At the heart of the discussion is a simple"
     }
 ]
