📚 Auto-update: News data refreshed - 2026-01-01 22:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35574,5 +35574,29 @@
         "published": "Thu, 01 Jan 2026 19:11:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46457027\">Comments</a>"
+    },
+    {
+        "id": "https://henry.codes/writing/a-website-to-destroy-all-websites/",
+        "title": "A website to destroy all websites",
+        "link": "https://henry.codes/writing/a-website-to-destroy-all-websites/",
+        "published": "Thu, 01 Jan 2026 20:36:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46457784\">Comments</a>"
+    },
+    {
+        "id": "https://blog.gdeltproject.org/gemini-as-indiana-jones-how-gemini-3-0-deciphered-the-mystery-of-a-nuremberg-chronicle-leafs-500-year-old-roundels/",
+        "title": "Gemini 3.0 Deciphered the Mystery of a Nuremberg Chronicle Leaf's",
+        "link": "https://blog.gdeltproject.org/gemini-as-indiana-jones-how-gemini-3-0-deciphered-the-mystery-of-a-nuremberg-chronicle-leafs-500-year-old-roundels/",
+        "published": "Thu, 01 Jan 2026 18:08:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46456387\">Comments</a>"
+    },
+    {
+        "id": "https://www.pcgamer.com/software/linux/im-brave-enough-to-say-it-linux-is-good-now-and-if-you-want-to-feel-like-you-actually-own-your-pc-make-2026-the-year-of-linux-on-your-desktop/",
+        "title": "Linux is good now; to feel like you actually own your PC, put Linux on it",
+        "link": "https://www.pcgamer.com/software/linux/im-brave-enough-to-say-it-linux-is-good-now-and-if-you-want-to-feel-like-you-actually-own-your-pc-make-2026-the-year-of-linux-on-your-desktop/",
+        "published": "Thu, 01 Jan 2026 20:35:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46457770\">Comments</a>"
     }
 ]
